# matting

./: .gitignore  .gitmodules  README.md  main.ipynb  matting.ipynb  pyproject.toml  server.py  train.ipynb  utils.py
calls/: Matting.bru  Upload.bru
matting/: docker-compose.yml
matting/backend/: Dockerfile  pyproject.toml  server.py  train.ipynb  utils.py
matting/frontend/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
matting/frontend/src/: App.tsx  index.css  index.tsx
matting/frontend/src/components/: DeletePointsButton.tsx  MattingDialog.tsx  ProjectCard.tsx  ProjectList.tsx  SeekSlider.tsx  UploadVideo.tsx  VideoContent.module.css  VideoContent.tsx  VideoControls.tsx
matting/frontend/src/components/utils/: FixedWidthText.tsx
matting/frontend/src/models/: models.ts
matting/frontend/src/repo/: api.ts  database.ts  store.ts
matting/frontend/src/utils/: array-to-url.tsx  clamp.ts  hash-video.tsx  read-file.tsx
rest/: First Frame.bru  Ping.bru  Upload.bru  bruno.json
src/: matting.ipynb  server.py  train.ipynb  utils.py
src/backend/: dataset.ipynb  server.py
src/frontend/: index.html  package.json
src/frontend/src/: App.tsx  models.ts
src/frontend/src/repo/: database.ts
